--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
     "require": {
-        "dropbox/dropbox-sdk": "1.1.*",
-        "lusitanian/oauth": "~0.3",
-        "j7mbo/twitter-api-php": "dev-master"
+        "lusitanian/oauth": "~0.3"
     }
 }
